Date:   Fri Feb 22 12:54:23 2019 +0100
    Finish the first part of the project

    - Implement the reward system
    - Implement the visited locations system
    - Implement the GPS system
    - Implement the thread system